<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- region # Offerwall main -->
    <string name="acbso_offerwall_main_title">오퍼월</string>
    <!-- endregion -->

    <!-- region # Offerwall Detail View -->
    <string name="acbso_offerwall_hide">광고숨김</string>
    <string name="acbso_offerwall_close">광고제거</string>
    <string name="acbso_offerwall_reward_inquiry">문의하기</string>
    <string name="acbso_offerwall_button_install">참여하러 가기</string>
    <string name="acbso_offerwall_button_confirm_cpi">참여하기</string>
    <string name="acbso_offerwall_button_confirm">참여하고 %,d 캐시받기</string>
    <string name="acbso_offerwall_button_validate">참여 확인하고 %,d 캐시 적립받기</string>
    <string name="acbso_offerwall_detail_title">참여방법</string>
    <string name="acbso_offerwall_do_you_want_to_remove_from_the_participating_list">광고 제거 시 복구가 불가하며\n포인트가 적립되지 않습니다.\n\n그래도 제거하시겠습니까?</string>
    <string name="acbso_offerwall_do_you_want_to_hide_from_the_participating_list">광고를 숨기시겠습니까?\n\n숨긴 광고는 \'설정\'에서 다시\n복구할 수 있습니다.</string>
    <string name="acbso_offerwall_failed_to_remove_please_try_again">광고 제거에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="acbso_offerwall_failed_to_participate_please_try_again">광고 참여에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="acbso_inquiry_message_complete"><![CDATA[<strong>미적립 문의가 접수되었습니다.</strong><br/><br/>진행 상황은 <strong>더보기>미적립문의</strong> 메뉴를 통해 확인 가능합니다.<br/></br>광고주 확인이 필요할 경우 처리가 다소 길어질 수 있는 점 양해 부탁드립니다.]]></string>
    <!-- endregion -->

    <!-- region # Inquiry Reward -->
    <string name="acbso_offerwall_inquiry_reward">미적립 문의 내역</string>
    <string name="acbso_offerwall_inquiry_reward_notice">문의 전 아래 사항을 먼저 확인해 주세요.\n해당 사항이 없다면 정보 입력 후 문의해주세요.</string>
    <string name="acbso_offerwall_inquiry_reward_description_1">1. 다른 곳을 통해 동일한 이벤트에 참여한 적이 있나요?</string>
    <string name="acbso_offerwall_inquiry_reward_description_2">2. 미션을 끝까지 완료 하셨나요?</string>
    <string name="acbso_offerwall_inquiry_reward_description_3">3. 이미 보상이 적립되진 않았나요?</string>
    <string name="acbso_offerwall_inquiry_reward_term_agree_provide_personal_information">개인정보 수집 및 이용 동의</string>
    <string name="acbso_offerwall_inquiry_reward_view_terms_and_conditions">약관보기</string>
    <string name="acbso_offerwall_inquiry_reward_button_inquiry">문의하기</string>
    <string name="acbso_offerwall_inquiry_reward_message_time_40_minute_not_yet">적립까지 40분 가량 소요될 수 있습니다.\n해당 시간 이후 문의해주세요.</string>
    <string name="acbso_offerwall_inquiry_reward_message_time_24_hour_not_yet">적립까지 24시간 가량 소요될 수 있습니다.\n해당 시간 이후 문의해주세요.</string>
    <string name="acbso_offerwall_inquiry_reward_message_complete"><![CDATA[<strong>미적립 문의가 접수되었습니다.</strong><br/><br/>진행 상황은 <strong>더보기>미적립문의</strong> 메뉴를 통해 확인 가능합니다.<br/></br>광고주 확인이 필요할 경우 처리가 다소 길어질 수 있는 점 양해 부탁드립니다.]]></string>
    <string name="acbso_offerwall_inquiry_reward_toast_is_not_available_name">올바른 이름을 적어주세요</string>
    <string name="acbso_offerwall_inquiry_reward_toast_is_not_available_phone_num">휴대폰 번호를 정확히 입력해주세요</string>
    <string name="acbso_offerwall_inquiry_reward_toast_is_not_agree_service">개인정보 제공에 동의해주세요</string>
    <string name="acbso_offerwall_inquiry_reward_contact_complete">확인이 완료되었습니다.\n\'더보기 > 미적립문의\'에서 내용을 확인해주세요.</string>
    <string name="acbso_offerwall_inquiry_reward_contact_has_answer">미적립문의에 대한 답변이 있습니다.\n\'더보기 > 미적립문의\'에서 내용을 확인해주세요</string>
    <string name="acbso_offerwall_inquiry_reward_contact_ing">적립 확인 진행 중입니다.</string>
    <!-- endregion -->

    <!-- region # Setting -->
    <string name="acbso_offerwall_hide_restore_nothing_toast">복구할 광고가 없습니다.</string>
    <string name="acbso_offerwall_hide_restore_toast">숨긴 광고가 복구되었습니다.</string>
    <!-- endregion -->

    <!-- region # Participation-->
    <string name="acbso_offerwall_rewarded_completed">이미 적립이 완료되었거나 참여 불가능한 광고입니다.</string>
    <string name="acbso_offerwall_not_installed_click_after_installation">미션이 완료되지 않았습니다.\n미션 수행 후 다시 시도해 주세요.</string>
    <string name="acbso_offerwall_button_offerwall_install">참여하러 가기</string>
    <string name="acbso_offerwall_cash_has_been_earned_please_check_your_accumulation_details">적립 요청이 완료되었습니다. 잠시 후 적립내역에서 확인하세요.</string>
    <!-- endregion -->

    <!-- region # transition name in Offerwall-->
    <string name="acbso_transition_name_offerwall_image">offerwall_image</string>
    <string name="acbso_transition_name_offerwall_badge">offerwall_badge</string>
    <string name="acbso_transition_name_offerwall_name">offerwall_name</string>
    <string name="acbso_transition_name_offerwall_description">offerwall_description</string>
    <string name="acbso_transition_name_offerwall_reward">offerwall_reward</string>
    <!-- endregion -->
</resources>