<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/list_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/acb_common_selector_item_base"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp">


        <RelativeLayout
            android:id="@+id/icon_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="fitCenter"
                android:transitionName="@string/acbso_transition_name_offerwall_image"
                tools:src="@drawable/acbso_ic_coin_blue" />

            <ImageView
                android:id="@+id/icon_badge"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/acbso_ic_participate_badge"
                android:transitionName="@string/acbso_transition_name_offerwall_badge"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>


        <TextView
            android:id="@+id/item_title"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/item_reward_frame"
            android:layout_toEndOf="@+id/icon_frame"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#212121"
            android:textSize="14dp"
            android:transitionName="@string/acbso_transition_name_offerwall_name"
            tools:text="타이틀이 입력되는 공간입니다. 최대 2줄까지 가능하지요.타이틀이 입력되는 공간입니다. 최대 2줄까지 가능하지요." />


        <TextView
            android:id="@+id/item_description"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_title"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toStartOf="@+id/item_reward_frame"
            android:layout_toLeftOf="@+id/item_reward_frame"
            android:layout_toEndOf="@+id/icon_frame"
            android:layout_toRightOf="@+id/icon_frame"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#757575"
            android:textSize="10dp"
            android:transitionName="@string/acbso_transition_name_offerwall_description"
            tools:text="상세내용이 입력되는 공간입니다. 최대 2줄까지 가능하지요.상세내용이 입력되는 공간입니다. 무한하게 늘어나지요.상세내용이 입력되는 공간입니다. 최대 2줄까지 가능하지요." />

        <RelativeLayout
            android:id="@+id/item_reward_frame"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_reward_amount"
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawableEnd="@drawable/acbso_ic_coin_blue"
                android:drawablePadding="3dp"
                android:gravity="center_vertical|end"
                android:text="-"
                android:textColor="#212121"
                android:textSize="14dp"
                android:transitionName="@string/acbso_transition_name_offerwall_reward"
                tools:text="1,000" />

            <TextView
                android:id="@+id/item_action_type"
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_reward_amount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/acb_common_rectangle_f57c00_r4"
                android:gravity="center"
                android:minWidth="45dp"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingEnd="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="2dp"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                tools:text="네이버플레이스" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/item_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/acb_core_color_pale_blue" />

</RelativeLayout>

